# AxiomEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Axiom/: Axiom.h  CMakeLists.txt  EntryPoint.h
Axiom/Asset/: AssetManager.cpp  AssetManager.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
Axiom/Core/: Application.cpp  Application.h  Base.h  Log.cpp  Log.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Axiom/Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  MainWindow.cpp  MainWindow.h  ViewportWidget.cpp  ViewportWidget.h  main.cpp
Axiom/Event/: Event.h  EventDispatcher.h
Axiom/Input/: Input.cpp  Input.h
Axiom/Math/: Math.h
Axiom/Platform/GLFW/: GLFWCursor.cpp  GLFWCursor.h  GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Axiom/RHI/: RHI.cpp  RHI.h  RHIBuffer.cpp  RHICommand.h  RHIShader.cpp  RHIShader.h  RHIVertexArray.cpp
Axiom/RHI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRHI.cpp  OpenGLRHI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Axiom/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FrameData.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Axiom/Renderer/RHI/: RHI.h  RHIBuffer.cpp  RHIBuffer.h  RHIShader.h  RHIVertexArray.h
Axiom/Renderer/RHI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Axiom/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRegistry.h
Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  MainWindow.cpp  MainWindow.h  ViewportWidget.cpp  ViewportWidget.h  main.cpp
Sandbox/: CMakeLists.txt  SandboxApp.cpp
Sandbox/Assets/Models/: .gitkeep
Sandbox/Assets/Models/royal_draft_windows_x64_v0.1.0_beta_20260303_130028/: README.txt  run_game.bat  starter_peice_lib.json
Sandbox/Assets/Models/royal_draft_windows_x64_v0.1.0_beta_20260303_130028/content/: icon_manifest_v1.json  level_templates_v1.json  rules_v1.json  sim_batch_v0_1.json
Sandbox/Assets/Textures/: .gitkeep
